SongStructure.replaceSongParts() is replaced by SongStructure.setSongPartsRhythm()=>SptRhythmChanged event replaces sptReplacedEvent. Improved RhythmTestMocks. Improved SongStructure unit tests, including concurrency tests. SongStructure constructor now requires a non-null ChordLeadSheet.